🔧 chore: Adds the bin field to package.json

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "node --no-warnings=ExperimentalWarning ./dist/index.mjs",
     "dev": "tsup --watch"
   },
+  "bin": "./dist/index.mjs",
   "keywords": [
     "ai",
     "git",
