--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@inkjs/ui": "^2.0.0",
     "@types/node": "^22.8.7",
     "commander": "^12.1.0",
+    "conf": "^13.0.1",
     "dotenv": "^16.4.5",
     "ink": "^5.0.1",
     "react": "^18.3.1",
