--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lazymit",
   "description": "Lazymit is a CLI tool that leverages the power of AI to generate Gitmoji-based commit messages",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "build": "tsup",
-    "start": "node --no-warnings=ExperimentalWarning ./dist/index.mjs",
+    "start": "node ./dist/index.mjs",
     "dev": "tsup --watch"
   },
   "bin": "./dist/index.mjs",
