🔧 chore: Remove experimental warning

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "scripts": {
     "build": "tsup",
-    "start": "node ./dist/index.mjs",
+    "start": "node ./dist/index.js",
     "dev": "tsup --watch"
   },
-  "bin": "./dist/index.mjs",
+  "bin": "./dist/index.js",
   "keywords": [
     "ai",
     "git",
@@ -38,5 +38,6 @@
     "ink": "^5.0.1",
     "react": "^18.3.1",
     "zustand": "^5.0.1"
-  }
+  },
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
