--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "conf": "^13.0.1",
     "dotenv": "^16.4.5",
     "ink": "^5.0.1",
+    "openai": "^4.71.1",
     "react": "^18.3.1",
     "zustand": "^5.0.1"
   },
