--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "build": "tsup",
     "start": "node ./dist/index.js",
-    "dev": "tsup --watch"
+    "dev": "tsup --watch",
+    "knip": "knip"
   },
   "bin": "./dist/index.js",
   "keywords": [
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/react": "^18.3.12",
     "import-jsx": "^5.0.0",
+    "knip": "^5.37.1",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3"
   },
@@ -34,7 +36,6 @@
     "@types/node": "^22.8.7",
     "commander": "^12.1.0",
     "conf": "^13.0.1",
-    "dotenv": "^16.4.5",
     "ink": "^5.0.1",
     "openai": "^4.71.1",
     "react": "^18.3.1",
